package com.planner.api.entity;

public enum LogType {
    TEXT,
    NUMBER,
    DURATION,
    TABLE,
    CHECKBOX
}
